# postthis

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTORS.txt  Dockerfile  LICENSE  README.md  local.yml  manage.py  merge_production_dotenvs_in_dotenv.py  print-coverage.py  production.yml  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.envs/.local/: .postgres
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build_image.yml  ci.yml  dependabot_automerge.yml  registry_retention.yml  release-please.yml
compose/local/django/: Dockerfile  start
compose/local/docs/: Dockerfile
compose/production/django/: Dockerfile
compose/production/traefik/: Dockerfile  traefik.yml
config/: celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
locale/: messages.pot
locale/de/LC_MESSAGES/: django.po
locale/en_US/LC_MESSAGES/: django.po
locale/pt/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
locale/ta/LC_MESSAGES/: django.po
postthis/: __init__.py  conftest.py
postthis/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
postthis/posts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
postthis/posts/migrations/: 0001_initial.py
postthis/posts/tests/: test_models.py  test_views.py
postthis/templates/: base.html
postthis/templates/posts/: post-detail.html  post-form.html  post-list.html  post-update.html  post_confirm_delete.html  post_list.html
postthis/users/: adapters.py  admin.py  apps.py  models.py  urls.py
postthis/users/migrations/: 0001_initial.py
postthis/users/tests/: test_admin.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
requirements/: base.txt  local.txt  production.txt
